--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "module": "es2022",
+    "moduleResolution": "bundler",
     "plugins": [{ "name": "@astrojs/ts-plugin" }],
     "baseUrl": ".",
     "paths": {
